frontend/test/should_pass/exectype_SetVisitedUntyped.grg
using exectype;

rule r
{
	modify  {
		exec({::x.visited[::i]=::y});
	}
}