frontend/test/should_fail/exectype_AssignVarToAttribute3.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=::varia ;> b:boolean=false && {x.i=b}); // x.i is integer
	}
}